--- a/p5/ex6/index.html
+++ b/p5/ex6/index.html
@@ -22,14 +22,12 @@
 </head>
 
 <body>
-<h1> Exercise 6 </h1>
+<h1> Instructions </h1>
 
-<p> (<strong>Artist Statement</strong>) For example 6 of my project 3 set, the drawing tool program from
-  project 2 is transferred over to p5js.  In order to do this, I first had to go through and change any commands
-  that were not the same in p5js.  For example, "void" becomes "function."  There were lots of changes that had to be made,
-  so using the inspect function on the browser, I looked for the errors listed and fixed them on the code.  I added an
-  additional two brushes, which included a pig and a frog brush.  I used the same frame of using functions with arguments
-  to create these.    </p>
+<p> For the different brushes, they change by pressing keys 1 through 7. Brush 1 draws a bear.
+  Brush 2 draws a flower, brush 3 draws a heart, brush 4 draws a bunny, brush 5 draws a dog, brush 6 draws a pig, and brush 7 draws a
+  frog. If the "x" key is pressed,
+  the screen is reset to white.     </p>
  <br>
 </body>
 </html>
