--- a/p5/finalproject/index.html
+++ b/p5/finalproject/index.html
@@ -28,9 +28,9 @@
 </head>
 
 <body>
-<h1> Final Project </h1>
+<h1> Pet Groomer Mini Game </h1>
 
-<p> For the final project, I created a pet grooming mini game based on the simulation interface context.  My simulation shows an example of an event or action that occurs in the real world.  There are five different scenes, showing different images and actions.  Instructions are provided to show the viewer how to play the simulator.  Use keys 1-5 to navigate these different scenes.  Press the buttons on the scenes to perform the actions written on the buttons.  The three P5 libraries used are P5.Scenemanager, P5.Sound, and P5.Clickable.  </p>
+<p> This is a pet grooming mini game based on simulation interface.  My simulation shows an example of an event or action that occurs in the real world.  There are five different scenes, showing different images and actions.  Instructions are provided to show the viewer how to play the simulator.  Use keys 1-5 to navigate these different scenes.  Press the buttons on the scenes to perform the actions written on the buttons.  Three P5 libraries, P5.Scenemanager, P5.Sound, and P5.Clickable, are used to make the user's experience more game-like and enjoyable.  </p>
  <br>
 </body>
 </html>
